2008-10-20  Chris Morley
	
	* include/openbabel/mcdlutil.h, src/mcdlutil.cpp: New files
	which use MCDL library to generate 2D coordinates
	
	* src/formats/MCDLformat.cpp: some code moved to the above files.
	
	* src/ops/gen2D.cpp: wrapper op for --gen2d 
	
	* data/templates.sdf: New file with example template
	
	* src/transform.cpp: help on --sort and --revsort

2008-10-20  Chris Morley
	 
	* include/openbabel/obmolecformat.h, src/obmolecformat.cpp:
	New functions to sort molecules, Sort(), OutputSortedMols()
	and LessThan()
	
	* include/openbabel/descriptor.h, src/descriptor.cpp: New
	virtual function LessThan() and default implementation.
	Make several error messages once only.
	
	* src/descriptors/filters.cpp: Add LessThan functions for TitleFilter
	and more complex one + GetCachedValue() + Init() for InChIFilter.
	 
	* include/openbabel/plugin.h: Add virtual funtion Init() 


	* include/openbabel/mol.h, src/mol.cpp: extra flag to indicate
	is a pattern, not a complete molecule. SetIsPatternStructure()
	Previously described, but somehow not committed.


2008-10-17  Tim Vandermeersch <tim.vandermeersch@gmail.com>

	* src/forcefield.cpp: in OBForceField::GetGrid(), calculate grid size 
	before adding probe atom. 

2008-10-17  Tim Vandermeersch <tim.vandermeersch@gmail.com>

	* include/openbabel/chains.h, src/chains.cpp: some changes from
	experimental branch, mainly documentation and some bug fixes.

	* src/formats/atomrecord.cpp: Interpret HG11, HE11, ... as hydrogen
	atoms at position gamma and epsilon. Previously these atom ids were
	interpreted as Hg and He atoms. (Fixes: #2002557 & #2026265)

2008-10-16  Tim Vandermeersch <tim.vandermeersch@gmail.com>

	* src/forcefields/forcefieldmmff94.cpp: Remove _logbuf[100] (Fixes
	#2022120)

2008-10-16  Tim Vandermeersch <tim.vandermeersch@gmail.com>

	* src/builder.cpp: fix bugs with linear molecules. (Fixes #2119034 & #2013814)

2008-10-15  Chris Morley

	* src/fingerprint.cpp: correct yesterdays commit which used